<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/form_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"/>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="ru.nsk.dsushko.hunter.presentation.views.StandartFormActivity">

            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/phone_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/email_candidate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/city_residence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_residence" />

            <EditText
                android:id="@+id/school_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/school"
                android:inputType="text" />

            <EditText
                android:id="@+id/faculty_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/faculty"
                android:inputType="text" />

            <EditText
                android:id="@+id/speciality_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/speciality"
                android:inputType="text" />

            <EditText
                android:id="@+id/graduate_year_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/graduate_year"
                android:inputType="text" />

            <com.androidbuts.multispinnerfilter.MultiSpinner
                android:id="@+id/interestingWorkfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.androidbuts.multispinnerfilter.MultiSpinner
                android:id="@+id/interestingEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment" />

            <CheckBox
                android:id="@+id/subscribe_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subscribe_news" />

            <CheckBox
                android:id="@+id/agree_personal_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agree_personal_data" />

            <Button
                android:id="@+id/send_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_form" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>